--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -39,3 +39,99 @@ span.st {
 span.st.scancel {
     color: red;
 }
+.image{
+color: #fff;
+font-size: 20px;
+padding-right: 10px;
+}
+ul.amenity-list {
+    list-style: none;
+    padding: 0;
+}
+.thumb-image{
+    float:left;
+    width:150px;
+    position:relative;
+    padding:5px;
+}
+label:not(.form-check-label):not(.custom-file-label) {
+    font-weight: 400;
+}
+div#mul-img {
+    width: 100%;
+    border: 1px solid #e1e1b1;
+    min-height: 180px;
+    border-radius: 10px;
+    padding: 35px 0;
+}
+.select-image {
+    margin-top: 10px;
+    color: #fff;
+    background-color: #28afb1;
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 53px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 hsl(0deg 0% 55% / 50%);
+    text-align: center;
+    padding-top: 12px;
+    font-size: 18px;
+}
+.upload-text {
+    color: #fff;
+    font-weight: 500;
+}
+#upload_image input[type="file"] {
+    display: none;
+}
+.cross-image {
+    border: 1px solid #91c47b;
+    padding: 5px;
+    border-radius: 20px;
+    color: red;
+    background: #fff;
+    width: 80px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+}
+.upload-image {
+    padding: 15px;
+    margin-top: 10px;
+    font-size: 16px;
+}
+#upload_image .btn-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    width: 100%;
+}
+h3.gallery-ttile {
+    width: 100%;
+    margin-top: 10px;
+    color: #fff;
+    background-color: #27b571;
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 53px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 hsl(0deg 0% 55% / 50%);
+    text-align: center;
+    padding-top: 12px;
+    font-size: 18px;
+}
+#old-images .imageremove {
+    margin-top: 20px;
+}
+button.btn.btn-success.save {
+    float: right;
+}
+.place-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    color: #aaa3a3;
+}
