--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -135,3 +135,35 @@ button.btn.btn-success.save {
     width: 100%;
     color: #aaa3a3;
 }
+ul.time-list {
+    padding: 0;
+    list-style: none;
+    width: 100%;
+}
+ul.time-list li {
+    float: left;
+    padding: 0;
+    margin: 0;
+    width: 20%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+ul.time-list li .b-time{
+    padding: 15px 15px;
+    border: 1px solid #f2f2f2;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    min-height: 110px;
+    width: 95%;
+    color: green;
+}
+.b-time p {
+    line-height: 1;
+    font-size: 12px;
+    color: #6b6666;
+}
+p.inner-des b {
+    color: #ff5000;
+}
