--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -181,3 +181,50 @@ form#bookform label {
     margin: 0 3px 0 15px;
     vertical-align: middle;
 }
+.walletTable i.fas.fa-arrow-down {
+    color: green;
+    margin-right: 10px;
+}
+.walletTable i.fas.fa-arrow-up {
+    color: red;
+    margin-right: 10px;
+}
+.lds-dual-ring.hidden { 
+    display: none;
+    }
+    .lds-dual-ring {
+      display: inline-block;
+      width: 80px;
+      height: 80px;
+    }
+    .lds-dual-ring:after {
+      content: " ";
+      display: block;
+      width: 64px;
+      height: 64px;
+      margin: 5% auto;
+      border-radius: 50%;
+      border: 6px solid #fff;
+      border-color: #fff transparent #fff transparent;
+      animation: lds-dual-ring 1.2s linear infinite;
+    }
+    @keyframes lds-dual-ring {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+     .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,.3);
+        z-index: 999;
+        opacity: 1;
+        transition: all 0.5s;
+    }
+ 
