--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -227,4 +227,16 @@ form#bookform label {
         opacity: 1;
         transition: all 0.5s;
     }
- 
+    form#date-filter {
+        display: flex;
+        justify-content: flex-start;
+    }
+    .filter-row {
+        margin-bottom: 30px;
+    }
+    .item.filter-btn {
+       padding-top: 31px;
+    }
+    .item {
+        margin: 0 5px 0 5px;
+    }
