added arabic version in cms pages

--- a/assets/backend/css/custom.css
+++ b/assets/backend/css/custom.css
@@ -276,3 +276,6 @@ form#bookform label {
         width: 25%;
         float: left;
     }
+    #cms-pages .error {
+        display: inherit;
+    }
